AG-1555 fix header text overflow pushing column menu button

--- a/community-modules/core/src/styles/structural/_common-structural.scss
+++ b/community-modules/core/src/styles/structural/_common-structural.scss
@@ -379,6 +379,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
 
 .ag-header-cell-comp-wrapper {
     width: 100%;
+    overflow: hidden;
 }
 
 .ag-header-cell-wrap-text .ag-header-cell-comp-wrapper {
