--- a/community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -381,6 +381,7 @@
 
     .ag-header-cell-comp-wrapper {
         width: 100%;
+        overflow: hidden;
     }
     
     .ag-header-cell-wrap-text .ag-header-cell-comp-wrapper {
